@@ -2,25 +2,15 @@
 Hash: SHA256
 
 DIST telepathy-idle-0.1.16.tar.gz 563668 SHA256 739614e2d526d82bdd2fd94026ca70a46670563556ff15537a2a08bf17172875 SHA512 dc39da580ad6c36a900cff2976a18f7dc016dfeffdc89f8dc6c808a2e7b758aa2f4a93a1ed7e24d9b280524c5aca20d9ad4a544eda3588eec0e3a42ee0a23003 WHIRLPOOL 23f72982d154cbdaef7a439bd8100a8be32643ad3a7bea41cc244650989b450071ce4f099330f65e56ed07656767aa04e0a5a914bf44cfb328fd6bc2a72d79f0
+DIST telepathy-idle-0.2.0.tar.gz 566492 SHA256 3013ad4b38d14ee630b8cc8ada5e95ccaa849b9a6fe15d2eaf6d0717d76f2fab SHA512 f5e36afc3ab4b52eb865f2c1e6565b99011a7540fc1a7783d3bbd7bbf50bc671a2147df6bde646c82059a466cc1df9bdb10e2500db5b7bb06d57a989a75c261b WHIRLPOOL 3ffe7a8fd6b06533ea5fba40733fb42072639d13c084e536f5eacf2af3385bea39e3e0193cfd6a287a4437255acb43c6807121c0eda57a75d2eabd61bb3643fb
 EBUILD telepathy-idle-0.1.16.ebuild 829 SHA256 0bfb9e01f9e138577d9e5f5a91fcc5d6a62e3316fe9d312d05ab72358266325d SHA512 f1f41567fd6b8878ea91156554cde6e382c771d33ff4aca3cdfeb4041cc66154875a0279d3ac9baddb8c1babf1828ef4310d85e737d5f92386446d15173b936e WHIRLPOOL 960c8468a56338c453d6e6d6eb9917381a7ebe2f4385c232057ee7501c06c45f5d82b71ae9ce381d24aded74e2ba6eeb5fa3bf7bdc2c5b3b6d6055cd110fe404
-MISC ChangeLog 8564 SHA256 b287b49a929383ec78b7a3ca165892835cf70c47c994026ad8ecec310f1df54b SHA512 825774687dc60018d1d96520df76a1b602b443326ea2eb87c0f8f7c37fb255856a34d41a970d8b4651e8ebc0600f19444b759a82433a2c0d4b858ef67d6d9c3a WHIRLPOOL 071755d98eeb1cf8347bc3f17f60ff689ed567622390ec19d868edfd8de29a32fef1c205d69706979f5ec6a02f65d925c52a7adeddc269796fccede8f7392894
+EBUILD telepathy-idle-0.2.0.ebuild 1067 SHA256 cb61ad0d6fc5c0bbcee2a0dbb7ef3ef29c835e01712b6d1007ca0cf37e5567f6 SHA512 6f2a93069fec4a91931deb2ab5f26cc505038211df63273ded7f88a2f2d05cbb660fb044bceb80adc98e688b41fcf86f2f35bb98f882e57390392540af9ad249 WHIRLPOOL bc3547cac253244b888762cf69a399a5213a4e56abf0aff708cd2df35395e674e61c30ece4581bd1afdffe8f60473bf4fcc9f89a65a05ac4522456efa833e2f3
+MISC ChangeLog 8731 SHA256 31d0504fe3e3685619dc0516f01a5b02fc2a2b9347145d26a0cd9ef1a133ccad SHA512 716a9ea073b863e786b5c0ee2d02711e68f684e580718fbd19aa9a568ff281b2dfdf77c2cf9019a82b32eed1f6bb5dd43140160b1b9bdbeef6c7185221fb2e0a WHIRLPOOL 15cb9e475c8aac76931c4a83ae7afad65b8b991846ee0d2a7bc290167f25d828dbdbef37f4127409955ffce4a1af0342f446282fedfce757927c92ae7cf22c14
 MISC metadata.xml 272 SHA256 ebc54f35f4f1c8f3c6be3b54ce148f308deef4b8d5ed1c6a8e4c4e6c2240df48 SHA512 6100b17f1315c4655688d02da579e6585f22cc6fe417648c83e75923f6810fc3e7ad90297cae5d6a3fc91937212158397213ecbb54d7f0fbb1461f39464a499b WHIRLPOOL 7933efa8d60ea3a70b6049f9996b15a89598cab91943123d2fbc4281f48c9ccc6a0ead54d97a8aad5225a8aae892dc368e07c45f10aea742d16b4718d855da70
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSKN+AXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOjp8QALAV8WxMiu3WB34+OdEIV/K2
-KvUhh5bppEAPuOs1v82yyN7Ut3RNtsY/681gr1UlnrZO1zoMFbKe7epGOpxJodjr
-sp0u8aWsVyoPoZigvJ1NyK3cNZE3s/O5sCobZcAUdqo1sdi9n7kw6b9dLgJEmbgD
-OqK/pppl6t3i27Xo4xKc4sLiGOdOGdvuCOEDtHuf8hr3+aj++Ls7wuIv54aCLIHY
-oIOva2E7kJokpbLkdph3a/VCRah6LENiaevyKfWmz/X6iHvluBtFA6Ezsm8dJX57
-EzS7USKEkViw1rbDShps/noQkmlGluvC9VblovWeiM72biYEcHKpavSS8/9Tj18Z
-kmt8cITeWyLbGd32+ZqDRnXZxV5jY5OQLkBZJ/1kNSbcKNHak1m6o8/gnrPjuPxO
-4zpsIBbkYC2UgrXfqLvxSB0DK9sw+2DgXU4LA93gEeydIQLvS//nk1Zn/d8TgJoM
-/tjQz/C3FidWg/zbyY8LNAi2m3nVUys0IdhgCB8wJYz4Agm54m51QqQgUDl5OjkD
-JpQxNYRmRyUl4OdKJdhgLlP//AOynMEufRKlmx34Ov2Sr6DUdZ5FGm5AM95/6/dh
-DLCPXSF1s+BYtALvJEdjHI2Lz4X6r4VezpctTXZxBUaYHAYLqaQfAribAgkKAPko
-O+V2zqtZp6plSDWwkWfh
-=+VSr
+iEYEAREIAAYFAlNa030ACgkQ1fmVwcYIWAb0yACgxOAjXRnIiv0zxKb9c8x/RN4u
+Ws8AnRkdY0eUv/4C82ca6h2N7KKIuXlc
+=ekFU
 -----END PGP SIGNATURE-----
