@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ksshaskpass/ksshaskpass-0.5.3-r1.ebuild,v 1.1 2014/03/21 21:34:45 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ksshaskpass/ksshaskpass-0.5.3-r1.ebuild,v 1.2 2014/04/25 21:18:46 johu Exp $
 
 EAPI=5
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://www.kde-apps.org/content/show.php?content=50971&forumpage=0"
 SRC_URI="http://www.kde-apps.org/CONTENT/content-files/50971-${P}.tar.gz"
 
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 SLOT="4"
 IUSE="debug"
 
