@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/ksshaskpass
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ksshaskpass/ChangeLog,v 1.3 2014/03/21 21:34:45 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ksshaskpass/ChangeLog,v 1.4 2014/04/25 21:18:46 johu Exp $
+
+  25 Apr 2014; Johannes Huber <johu@gentoo.org> -ksshaskpass-0.5.3.ebuild,
+  ksshaskpass-0.5.3-r1.ebuild:
+  amd64/x86 stable, remove old.
 
 *ksshaskpass-0.5.3-r1 (21 Mar 2014)
 
