@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/telepathy-idle
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/telepathy-idle/ChangeLog,v 1.62 2013/09/05 19:44:51 mgorny Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-irc/telepathy-idle/ChangeLog,v 1.63 2014/04/25 21:28:28 eva Exp $
+
+*telepathy-idle-0.2.0 (25 Apr 2014)
+
+  25 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org>
+  +telepathy-idle-0.2.0.ebuild:
+  Version bump. Recommended for >=Gnome 3.10.
 
   05 Sep 2013; Michał Górny <mgorny@gentoo.org> telepathy-idle-0.1.16.ebuild:
   Clean up PYTHON_COMPAT from old implementations.
